--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,12 @@
 				this.on('success', function (file) {
 					const data = JSON.parse(file.xhr.responseText);
 					console.log('Success', data);
-					
+
 					const a = document.createElement('a');
-  				a.setAttribute('href', '/' + data.id);
-    			a.innerHTML = '<br>' + data.id;
-    			file.previewTemplate.children[1].appendChild(a);
+					a.setAttribute('href', '/' + data.id);
+					a.setAttribute('class', 'dz-filename');
+					a.innerHTML = `<span>${data.id}</span>`;
+					file.previewTemplate.children[1].appendChild(a);
 				});
 			}
 		});
